--- a/nginx.yaml
+++ b/nginx.yaml
@@ -45,7 +45,7 @@ data:
     </head>
     <body>
         <h1>Welcome to my app</h1>
-        <p><small>This is my Cousera Guided Project by Ahmed Mourad</small></p>
+        <p><small>This Project Done by Mohamed Magdy</small></p>
     </body>
     </html>
 ---
